# BANedetta-For-Bots

./: pyproject.toml  test.py
banedetta_db/: __init__.py  __polling.py  database.py  polling.py  synchronization.py
banedetta_for_bots/: __init__.py
banedetta_mfb/: database.py  polling.py
