[tool.poetry]
name = "banedetta_db"
version = "1.54"
description = "A special module for working with databases on the bot's side."
authors = ["Taskov1ch"]

[tool.poetry.dependencies]
python = "^3.10"
aiomysql = "^0.2.0"
cryptography = "^43.0.1"
asyncio = "^3.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
